source/fado/parse/GenericSQLParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /Users/jasonosgood/Projects/fado/source/fado/parse/GenericSQL.g 2014-02-12 17:22:46
 
package fado.parse;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
import org.antlr.runtime.debug.*;
import java.io.IOException;
public class GenericSQLParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "SEMI", "LPAREN", "RPAREN", "SELECT", "ALL", "DISTINCT", "UNIQUE", "TOP", "Integer", "PERCENT", "INSERT", "UPDATE", "SET", "COMMA", "EQ", "INTO", "VALUES", "STAR", "AS", "DOT", "Identifier", "FROM", "JOIN", "INNER", "LEFT", "OUTER", "RIGHT", "NATURAL", "ON", "WHERE", "GROUP", "BY", "HAVING", "ORDER", "ASC", "DESC", "OR", "AND", "NOT", "IN", "BETWEEN", "IS", "NULL", "EXISTS", "LIKE", "NEQ1", "NEQ2", "LTE", "LT", "GTE", "GT", "ANY", "SOME", "PLUS", "MINUS", "DIVIDE", "Float", "String", "TRUE", "FALSE", "Timestamp", "CASE", "WHEN", "THEN", "ELSE", "END", "QuotedIdentifier", "A", "L", "N", "D", "Y", "S", "C", "B", "E", "T", "W", "DELETE", "I", "X", "F", "R", "O", "M", "U", "FULL", "G", "P", "H", "V", "J", "K", "UNION", "Q", "USING", "MAX", "MIN", "COUNT", "Z", "LCURLY", "RCURLY", "STRCAT", "QUESTION", "COLON", "MOD", "Digit", "Exponent", "Comment", "Whitespace", "'{d'", "'{t'", "'{ts'"
    };
    public static final int LT=52;
    public static final int STAR=21;
    public static final int MOD=109;
    public static final int CASE=65;
    public static final int COUNT=102;
    public static final int NOT=42;
    public static final int EOF=-1;
    public static final int Identifier=24;
    public static final int RPAREN=6;
    public static final int FULL=90;
    public static final int INSERT=14;
    public static final int USING=99;
    public static final int Comment=112;
    public static final int EQ=18;
    public static final int SELECT=7;
    public static final int INTO=19;
    public static final int DIVIDE=59;
    public static final int D=74;
    public static final int E=79;
    public static final int UNIQUE=10;
    public static final int F=85;
    public static final int G=91;
    public static final int A=71;
    public static final int B=78;
    public static final int ASC=38;
    public static final int C=77;
    public static final int L=72;
    public static final int M=88;
    public static final int N=73;
    public static final int O=87;
    public static final int H=93;
    public static final int NULL=46;
    public static final int I=83;
    public static final int J=95;
    public static final int ELSE=68;
    public static final int K=96;
    public static final int U=89;
    public static final int ON=32;
    public static final int T=80;
    public static final int W=81;
    public static final int LCURLY=104;
    public static final int V=94;
    public static final int Q=98;
    public static final int P=92;
    public static final int DELETE=82;
    public static final int S=76;
    public static final int R=86;
    public static final int Y=75;
    public static final int X=84;
    public static final int Z=103;
    public static final int Float=60;
    public static final int GROUP=34;
    public static final int OR=40;
    public static final int Timestamp=64;
    public static final int GT=54;
    public static final int FROM=25;
    public static final int END=69;
    public static final int FALSE=63;
    public static final int DISTINCT=9;
    public static final int NEQ1=49;
    public static final int WHERE=33;
    public static final int INNER=27;
    public static final int ORDER=37;
    public static final int T__116=116;
    public static final int T__114=114;
    public static final int NEQ2=50;
    public static final int GTE=53;
    public static final int T__115=115;
    public static final int MAX=100;
    public static final int UPDATE=15;
    public static final int Exponent=111;
    public static final int AND=41;
    public static final int LTE=51;
    public static final int LPAREN=5;
    public static final int AS=22;
    public static final int IN=43;
    public static final int THEN=67;
    public static final int COMMA=17;
    public static final int IS=45;
    public static final int LEFT=28;
    public static final int SOME=56;
    public static final int ALL=8;
    public static final int PLUS=57;
    public static final int EXISTS=47;
    public static final int String=61;
    public static final int DOT=23;
    public static final int Whitespace=113;
    public static final int STRCAT=106;
    public static final int LIKE=48;
    public static final int OUTER=29;
    public static final int BY=35;
    public static final int PERCENT=13;
    public static final int VALUES=20;
    public static final int RIGHT=30;
    public static final int SET=16;
    public static final int HAVING=36;
    public static final int MIN=101;
    public static final int MINUS=58;
    public static final int Digit=110;
    public static final int QuotedIdentifier=70;
    public static final int SEMI=4;
    public static final int TRUE=62;
    public static final int JOIN=26;
    public static final int UNION=97;
    public static final int COLON=108;
    public static final int ANY=55;
    public static final int QUESTION=107;
    public static final int WHEN=66;
    public static final int RCURLY=105;
    public static final int NATURAL=31;
    public static final int DESC=39;
    public static final int TOP=11;
    public static final int BETWEEN=44;
    public static final int Integer=12;

    // delegates
    // delegators

    public static final String[] ruleNames = new String[] {
        "invalidRule", "synpred84_GenericSQL", "synpred13_GenericSQL", "synpred92_GenericSQL", 
        "synpred57_GenericSQL", "nestedCondition", "synpred10_GenericSQL", 
        "synpred83_GenericSQL", "synpred4_GenericSQL", "comparator", "synpred64_GenericSQL", 
        "into", "orderBy", "synpred44_GenericSQL", "having", "columnRef", 
        "synpred100_GenericSQL", "synpred81_GenericSQL", "isNull", "synpred29_GenericSQL", 
        "tableRef", "synpred91_GenericSQL", "orderByItem", "synpred21_GenericSQL", 
        "update", "synpred60_GenericSQL", "synpred89_GenericSQL", "synpred69_GenericSQL", 
        "synpred3_GenericSQL", "values", "synpred63_GenericSQL", "value", 
        "synpred23_GenericSQL", "like", "synpred49_GenericSQL", "nestedExpression", 
        "conditionList", "synpred32_GenericSQL", "setter", "synpred76_GenericSQL", 
        "synpred20_GenericSQL", "date", "synpred47_GenericSQL", "synpred43_GenericSQL", 
        "synpred48_GenericSQL", "synpred85_GenericSQL", "synpred8_GenericSQL", 
        "select", "condition", "synpred14_GenericSQL", "synpred26_GenericSQL", 
        "synpred103_GenericSQL", "groupBy", "synpred68_GenericSQL", "synpred31_GenericSQL", 
        "tableAlias", "synpred61_GenericSQL", "synpred80_GenericSQL", "synpred25_GenericSQL", 
        "synpred79_GenericSQL", "synpred97_GenericSQL", "statement", "synpred98_GenericSQL", 
        "synpred51_GenericSQL", "synpred59_GenericSQL", "synpred101_GenericSQL", 
        "synpred30_GenericSQL", "synpred42_GenericSQL", "item", "quantifier", 
        "between", "comparison", "synpred41_GenericSQL", "synpred67_GenericSQL", 
        "synpred24_GenericSQL", "synpred17_GenericSQL", "synpred73_GenericSQL", 
        "synpred55_GenericSQL", "synpred12_GenericSQL", "synpred18_GenericSQL", 
        "synpred9_GenericSQL", "synpred75_GenericSQL", "synpred87_GenericSQL", 
        "synpred50_GenericSQL", "expressionList", "in", "synpred15_GenericSQL", 
        "databaseName", "synpred11_GenericSQL", "joinList", "synpred72_GenericSQL", 
        "synpred34_GenericSQL", "synpred38_GenericSQL", "synpred93_GenericSQL", 
        "synpred40_GenericSQL", "columnName", "synpred5_GenericSQL", "columnList", 
        "synpred36_GenericSQL", "synpred77_GenericSQL", "allColumns", "synpred16_GenericSQL", 
        "synpred62_GenericSQL", "synpred28_GenericSQL", "unary", "synpred86_GenericSQL", 
        "synpred53_GenericSQL", "synpred96_GenericSQL", "synpred99_GenericSQL", 
        "itemList", "synpred70_GenericSQL", "fromItem", "synpred66_GenericSQL", 
        "synpred58_GenericSQL", "synpred27_GenericSQL", "synpred1_GenericSQL", 
        "synpred94_GenericSQL", "expression", "literal", "synpred82_GenericSQL", 
        "synpred46_GenericSQL", "synpred78_GenericSQL", "synpred22_GenericSQL", 
        "synpred19_GenericSQL", "synpred37_GenericSQL", "synpred88_GenericSQL", 
        "synpred90_GenericSQL", "synpred65_GenericSQL", "synpred6_GenericSQL", 
        "caseExpression", "synpred45_GenericSQL", "synpred74_GenericSQL", 
        "synpred54_GenericSQL", "alias", "subSelect", "multiply", "insert", 
        "join", "function", "synpred95_GenericSQL", "where", "exists", "synpred102_GenericSQL", 
        "synpred71_GenericSQL", "from", "synpred35_GenericSQL", "synpred52_GenericSQL", 
        "synpred7_GenericSQL", "synpred39_GenericSQL", "synpred2_GenericSQL", 
        "synpred56_GenericSQL", "synpred33_GenericSQL", "tableName"
    };
     
        public int ruleLevel = 0;
        public int getRuleLevel() { return ruleLevel; }
        public void incRuleLevel() { ruleLevel++; }
        public void decRuleLevel() { ruleLevel--; }
        public GenericSQLParser(TokenStream input) {
            this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
        }
        public GenericSQLParser(TokenStream input, int port, RecognizerSharedState state) {
            super(input, state);
            DebugEventSocketProxy proxy =
                new DebugEventSocketProxy(this, port, null);
            setDebugListener(proxy);
            try {
                proxy.handshake();
            }
            catch (IOException ioe) {
                reportError(ioe);
            }
        }
    public GenericSQLParser(TokenStream input, DebugEventListener dbg) {
        super(input, dbg, new RecognizerSharedState());

    }
    protected boolean evalPredicate(boolean result, String predicate) {
        dbg.semanticPredicate(result, predicate);
        return result;
    }


    public String[] getTokenNames() { return GenericSQLParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/jasonosgood/Projects/fado/source/fado/parse/GenericSQL.g"; }





    // $ANTLR start "statement"
    // /Users/jasonosgood/Projects/fado/source/fado/parse/GenericSQL.g:53:1: statement : ( select ( SEMI )? EOF | insert ( SEMI )? EOF | update ( SEMI )? EOF );
    public final void statement() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "statement");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(53, 1);

        try {
            // /Users/jasonosgood/Projects/fado/source/fado/parse/GenericSQL.g:54:3: ( select ( SEMI )? EOF | insert ( SEMI )? EOF | update ( SEMI )? EOF )
            int alt4=3;
            try { dbg.enterDecision(4);

            switch ( input.LA(1) ) {
            case SELECT:
                {
                alt4=1;
                }
                break;
            case INSERT:
                {
                alt4=2;
                }
                break;
            case UPDATE:
                {
                alt4=3;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;
            }

            } finally {dbg.exitDecision(4);}

            switch (alt4) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/jasonosgood/Projects/fado/source/fado/parse/GenericSQL.g:54:5: select ( SEMI )? EOF
                    {
                    dbg.location(54,5);
                    pushFollow(FOLLOW_select_in_statement67);
                    select();

                    state._fsp--;
                    if (state.failed) return ;
                    dbg.location(54,12);
                    // /Users/jasonosgood/Projects/fado/source/fado/parse/GenericSQL.g:54:12: ( SEMI )?
                    int alt1=2;
                    try { dbg.enterSubRule(1);
                    try { dbg.enterDecision(1);

                    int LA1_0 = input.LA(1);

                    if ( (LA1_0==SEMI) ) {
                        alt1=1;
                    }
                    } finally {dbg.exitDecision(1);}

                    switch (alt1) {
                        case 1 :
                            dbg.enterAlt(1);

                            // /Users/jasonosgood/Projects/fado/source/fado/parse/GenericSQL.g:54:14: SEMI
                            {
                            dbg.location(54,14);
                            match(input,SEMI,FOLLOW_SEMI_in_statement71); if (state.failed) return ;

                            }
                            break;

                    }
                    } finally {dbg.exitSubRule(1);}

                    dbg.location(54,22);
                    match(input,EOF,FOLLOW_EOF_in_statement76); if (state.failed) return ;

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /Users/jasonosgood/Projects/fado/source/fado/parse/GenericSQL.g:55:5: insert ( SEMI )? EOF
                    {
                    dbg.location(55,5);
                    pushFollow(FOLLOW_insert_in_statement82);
                    insert();

                    state._fsp--;
                    if (state.failed) return ;
                    dbg.location(55,12);
                    // /Users/jasonosgood/Projects/fado/source/fado/parse/GenericSQL.g:55:12: ( SEMI )?
                    int alt2=2;
                    try { dbg.enterSubRule(2);
                    try { dbg.enterDecision(2);

                    int LA2_0 = input.LA(1);

                    if ( (LA2_0==SEMI) ) {
                        alt2=1;
                    }
                    } finally {dbg.exitDecision(2);}

                    switch (alt2) {
                        case 1 :
                            dbg.enterAlt(1);

                            // /Users/jasonosgood/Projects/fado/source/fado/parse/GenericSQL.g:55:14: SEMI
                            {
                            dbg.location(55,14);
                            match(input,SEMI,FOLLOW_SEMI_in_statement86); if (state.failed) return ;

                            }
                            break;

                    }
                    } finally {dbg.exitSubRule(2);}

                    dbg.location(55,22);
                    match(input,EOF,FOLLOW_EOF_in_statement91); if (state.failed) return ;

                    }
                    break;
                case 3 :
                    dbg.enterAlt(3);

                    // /Users/jasonosgood/Projects/fado/source/fado/parse/GenericSQL.g:56:5: update ( SEMI )? EOF
                    {
                    dbg.location(56,5);
                    pushFollow(FOLLOW_update_in_statement97);
                    update();

                    state._fsp--;
                    if (state.failed) return ;
                    dbg.location(56,12);
                    // /Users/jasonosgood/Projects/fado/source/fado/parse/GenericSQL.g:56:12: ( SEMI )?
                    int alt3=2;
                    try { dbg.enterSubRule(3);
                    try { dbg.enterDecision(3);

                    int LA3_0 = input.LA(1);

                    if ( (LA3_0==SEMI) ) {
                        alt3=1;
                    }
                    } finally {dbg.exitDecision(3);}

                    switch (alt3) {
                        case 1 :
                            dbg.enterAlt(1);

                            // /Users/jasonosgood/Projects/fado/source/fado/parse/GenericSQL.g:56:14: SEMI
                            {
                            dbg.location(56,14);
                            match(input,SEMI,FOLLOW_SEMI_in_statement101); if (state.failed) return ;

                            }
                            break;

                    }
                    } finally {dbg.exitSubRule(3);}

                    dbg.location(56,22);
                    match(input,EOF,FOLLOW_EOF_in_statement106); if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(58, 3);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "statement");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "statement"


    // $ANTLR start "subSelect"
    // /Users/jasonosgood/Projects/fado/source/fado/parse/GenericSQL.g:60:1: subSelect : ( select | LPAREN select RPAREN );
    public final void subSelect() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "subSelect");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(60, 1);

        try {
            // /Users/jasonosgood/Projects/fado/source/fado/parse/GenericSQL.g:61:3: ( select | LPAREN select RPAREN )
            int alt5=2;
            try { dbg.enterDecision(5);

            int LA5_0 = input.LA(1);

            if ( (LA5_0==SELECT) ) {
                alt5=1;
            }
            else if ( (LA5_0==LPAREN) ) {
                alt5=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;
            }
            } finally {dbg.exitDecision(5);}

            switch (alt5) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/jasonosgood/Projects/fado/source/fado/parse/GenericSQL.g:61:5: select
                    {
                    dbg.location(61,5);
                    pushFollow(FOLLOW_select_in_subSelect122);
                    select();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /Users/jasonosgood/Projects/fado/source/fado/parse/GenericSQL.g:62:5: LPAREN select RPAREN
                    {
                    dbg.location(62,5);
                    match(input,LPAREN,FOLLOW_LPAREN_in_subSelect128); if (state.failed) return ;
                    dbg.location(62,12);
                    pushFollow(FOLLOW_select_in_subSelect130);
                    select();

                    state._fsp--;
                    if (state.failed) return ;
                    dbg.location(62,19);
                    match(input,RPAREN,FOLLOW_RPAREN_in_subSelect132); if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(63, 3);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "subSelect");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "subSelect"


    // $ANTLR start "select"
    // /Users/jasonosgood/Projects/fado/source/fado/parse/GenericSQL.g:65:1: select : SELECT ( ALL | DISTINCT | UNIQUE )? ( TOP Integer ( PERCENT )? )? itemList ( into )? from ( joinList )? ( where )? ( groupBy )? ( having )? ( orderBy )? ;
    public final void select() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "select");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(65, 1);

        try {
            // /Users/jasonosgood/Projects/fado/source/fado/parse/GenericSQL.g:66:3: ( SELECT ( ALL | DISTINCT | UNIQUE )? ( TOP Integer ( PERCENT )? )? itemList ( into )? from ( joinList )? ( where )? ( groupBy )? ( having )? ( orderBy )? )
            dbg.enterAlt(1);

            // /Users/jasonosgood/Projects/fado/source/fado/parse/GenericSQL.g:66:5: SELECT ( ALL | DISTINCT | UNIQUE )? ( TOP Integer ( PERCENT )? )? itemList ( into )? from ( joinList )? ( where )? ( groupBy )? ( having )? ( orderBy )?
            {
            dbg.location(66,5);
            match(input,SELECT,FOLLOW_SELECT_in_select147); if (state.failed) return ;
            dbg.location(67,5);
            // /Users/jasonosgood/Projects/fado/source/fado/parse/GenericSQL.g:67:5: ( ALL | DISTINCT | UNIQUE )?
            int alt6=2;
            try { dbg.enterSubRule(6);
            try { dbg.enterDecision(6);

            int LA6_0 = input.LA(1);

            if ( ((LA6_0>=ALL && LA6_0<=UNIQUE)) ) {
                alt6=1;
            }
            } finally {dbg.exitDecision(6);}

            switch (alt6) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/jasonosgood/Projects/fado/source/fado/parse/GenericSQL.g:
                    {
                    dbg.location(67,5);
                    if ( (input.LA(1)>=ALL && input.LA(1)<=UNIQUE) ) {
                        input.consume();
                        state.errorRecovery=false;state.failed=false;
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return ;}
                        MismatchedSetException mse = new MismatchedSetException(null,input);
                        dbg.recognitionException(mse);
                        throw mse;
                    }


                    }
                    break;

            }
            } finally {dbg.exitSubRule(6);}

            dbg.location(68,5);
            // /Users/jasonosgood/Projects/fado/source/fado/parse/GenericSQL.g:68:5: ( TOP Integer ( PERCENT )? )?
            int alt8=2;
            try { dbg.enterSubRule(8);
            try { dbg.enterDecision(8);

            int LA8_0 = input.LA(1);

            if ( (LA8_0==TOP) ) {
                alt8=1;
            }
            } finally {dbg.exitDecision(8);}

            switch (alt8) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/jasonosgood/Projects/fado/source/fado/parse/GenericSQL.g:68:7: TOP Integer ( PERCENT )?
                    {
                    dbg.location(68,7);
                    match(input,TOP,FOLLOW_TOP_in_select174); if (state.failed) return ;
                    dbg.location(68,11);
                    match(input,Integer,FOLLOW_Integer_in_select176); if (state.failed) return ;
                    dbg.location(68,19);
                    // /Users/jasonosgood/Projects/fado/source/fado/parse/GenericSQL.g:68:19: ( PERCENT )?
                    int alt7=2;
                    try { dbg.enterSubRule(7);
                    try { dbg.enterDecision(7);

                    int LA7_0 = input.LA(1);

                    if ( (LA7_0==PERCENT) ) {
                        alt7=1;
                    }
                    } finally {dbg.exitDecision(7);}

                    switch (alt7) {
                        case 1 :
                            dbg.enterAlt(1);

                            // /Users/jasonosgood/Projects/fado/source/fado/parse/GenericSQL.g:68:21: PERCENT
                            {
                            dbg.location(68,21);
                            match(input,PERCENT,FOLLOW_PERCENT_in_select180); if (state.failed) return ;

                            }
                            break;

                    }
                    } finally {dbg.exitSubRule(7);}


                    }
                    break;

            }
            } finally {dbg.exitSubRule(8);}

            dbg.location(69,5);
            pushFollow(FOLLOW_itemList_in_select192);
            itemList();

            state._fsp--;
            if (state.failed) return ;
            dbg.location(70,5);
            // /Users/jasonosgood/Projects/fado/source/fado/parse/GenericSQL.g:70:5: ( into )?
            int alt9=2;
            try { dbg.enterSubRule(9);
            try { dbg.enterDecision(9);

            int LA9_0 = input.LA(1);

            if ( (LA9_0==INTO) ) {
                alt9=1;
            }
            } finally {dbg.exitDecision(9);}

            switch (alt9) {
                case 1 :
                    dbg.enterAlt(1);
